Closed Bug 367442 Opened 18 years ago Closed 18 years ago

[FIX][reflow branch]Possible to end up with bogus mHResize flag in reflow state

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(2 files)

nsHTMLReflowState::mComputedWidth should be protected In bug 364762 I discovered that due to a caller changing mComputedWidth we end up with an incorrect mFlags.mHResize. We should probably make the member protected and have a getter that just returns it and a setter that resets mFlags as needed.
Summary: [reflow branch] → [reflow branch]Possible to end up with bogus mHResize flag in reflow state
Attached patch Like soSplinter Review
Attachment #252268 - Flags: superreview?(dbaron)
Attachment #252268 - Flags: review?(dbaron)
Assignee: nobody → bzbarsky
Summary: [reflow branch]Possible to end up with bogus mHResize flag in reflow state → [FIX][reflow branch]Possible to end up with bogus mHResize flag in reflow state
Comment on attachment 252268 [details] [diff] [review] Like so r+sr=dbaron. The indentation in nsMathMLmactionFrame is a column off, fwiw.
Attachment #252268 - Flags: superreview?(dbaron)
Attachment #252268 - Flags: superreview+
Attachment #252268 - Flags: review?(dbaron)
Attachment #252268 - Flags: review+
Actually, that was a tab-indent.... Fixed to use spaces. And checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Depends on: 368259
Why not move the assignment inside the test? if (mComputedWidth != aComputedWidth) { mComputedWidth = aComputedWidth; InitResizeFlags(frame->GetPresContext()); } - // XXX fix up bad mComputedWidth for scroll frame - kidReflowState.mComputedWidth = PR_MAX(kidReflowState.mComputedWidth, 0); Why was that no longer needed?
Flags: in-testsuite?
> Why not move the assignment inside the test? Good idea. I'll do that. > Why was that no longer needed? Because mComputedWidth should never be negative. It used to be in some buggy cases, but we fixed those a while back.
Attachment #261924 - Flags: superreview?(dbaron)
Attachment #261924 - Flags: review?(dbaron)
Comment on attachment 261924 [details] [diff] [review] Address jag's comment r+sr=dbaron
Attachment #261924 - Flags: superreview?(dbaron)
Attachment #261924 - Flags: superreview+
Attachment #261924 - Flags: review?(dbaron)
Attachment #261924 - Flags: review+
Checked in that followup patch too.
Depends on: 451518
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: