Simplify code.  Bug 367442 followup, jag's idea, r+sr=dbaron